--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yifan Deng"
-description              : "不错不错"
+description              : 
 repository               : "Mute-ZEN/Mute-ZEN"
 google_scholar_stats_use_cdn : true
 
@@ -23,9 +23,9 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Yifan Deng"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Lorem ipsum College"
+  bio              : "IIE\n\nResearch scientist in Bytedance AI Lab, Speech & Audio Team. Focusing on speech, NLP and music."
   location         : "Beijing, China"
-  employer         : "IIE"
+  employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "dengyifan@iie.ac.cn"
