--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Yifan Deng"
+title                    : "来自邓一帆的自我介绍"
 description              : 
 repository               : "Mute-ZEN/Mute-ZEN"
 google_scholar_stats_use_cdn : true
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Yifan Deng"
+  name             : "Yifan Deng (邓一帆)"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "IIE\n\nResearch scientist in Bytedance AI Lab, Speech & Audio Team. Focusing on speech, NLP and music."
   location         : "Beijing, China"
