--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "来自邓一帆的自我介绍"
-description              : "Research scientist in Bytedance AI Lab, Speech & Audio Team. Focusing on speech, NLP and music."
+description              : "Students in Institute of Information Engineering, Chinese Academy of Sciences. Focusing on NLP and Photography."
 repository               : "deng1fan/deng1fan"
 google_scholar_stats_use_cdn : true
 
