--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "来自邓一帆的自我介绍"
-description              : "目前于中国科学院信息工程研究所攻读博士学位，研究方向包含**可信对话**、**个性化对话**、**可控生成**等对话生成相关方向"
+description              : "目前于中国科学院信息工程研究所攻读博士学位"
 repository               : "deng1fan/deng1fan"
 google_scholar_stats_use_cdn : true
 
